:pencil2: Fix typo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
           command: go test -v ./...
       - run:
           name: Create svg from gocomands/cpu.pprof
-          run: go tool pprof -svg ./pprof/gocomands/cpu.pprof > ./pprof/gocomands/cpu.svg
+          command: go tool pprof -svg ./pprof/gocomands/cpu.pprof > ./pprof/gocomands/cpu.svg
       - run:
           name: Create svg from maindir/cpu.pprof
-          run: go tool pprof -svg ./pprof/maindir/cpu.pprof > ./pprof/maindir/cpu.svg
+          command: go tool pprof -svg ./pprof/maindir/cpu.pprof > ./pprof/maindir/cpu.svg
       - store_artifacts:
           path: /go/src/github.com/sawadashota/gocmd/pprof
