--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,16 +4,20 @@ builds:
     goos:
       - darwin
       - linux
+      - windows
     goarch:
       - amd64
-      - amd32
+      - 386
 # Archive customization
 archive:
   format: tar.gz
   replacements:
     amd64: 64-bit
+    386: 32-bit
     darwin: macOS
-    linux: Tux
+  files:
+    - LICENSE
+    - README.md
 
 brew:
   # Name of the recipe
