:bug: Fix typo name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ workflows:
               only: /.*/
       - release:
           requires:
-            - test
+            - build
           filters:
             tags:
               only: /.*/
