--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,22 +2,21 @@ version: 2
 jobs:
   build:
     docker: &docker
-      - image: circleci/golang:1.10.0
+      - image: circleci/golang:1.11.2
+    environment:
+      GO111MODULE: "on"
     working_directory: &working_directory /go/src/github.com/sawadashota/gocmd
     steps:
       - checkout
       - run:
-          name: Install dep
-          command: go get -u github.com/golang/dep/cmd/dep
-      - run:
           name: Install Dependencies
-          command: dep ensure -v
+          command: go mod download
       - run:
           name: Create binary
           command: go install
       - run:
           name: Test
-          command: go test -v ./...
+          command: go test -v -cover ./...
       - store_artifacts:
           path: /go/src/github.com/sawadashota/gocmd/pprof
   release:
@@ -26,11 +25,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dep
-          command: go get -u github.com/golang/dep/cmd/dep
-      - run:
           name: Install Dependencies
-          command: dep ensure -v
+          command: go mod download
       - run:
           name: Install goreleaser
           command: go get -u github.com/goreleaser/goreleaser
