--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,10 @@ jobs:
           with_goreleaser: true
       - run:
           name: Release
-          command: goreleaser
+          command: |
+            echo ${CIRCLE_TAG}
+            echo ${CIRCLE_SHA1}
+            VERSION=${CIRCLE_TAG} GIT_HASH=${CIRCLE_SHA1} goreleaser
 workflows:
   version: 2
   default:
