--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,11 @@ jobs:
       -
         name: Set up Go
         uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+      -
+        name: Set Env
+        run: echo ::set-env name=DATE::$(date -u +"%Y-%m-%d %k:%M:%S UTC")
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
@@ -24,4 +29,7 @@ jobs:
           version: latest
           args: release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          VERSION: ${{ github.ref }}
+          GIT_HASH: ${{ github.sha }}
+          DATE: ${{ env.Date }}
